--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ description = "A high-performance FIX protocol engine"
 thiserror = "1.0"
 bytes = "1.5"
 memchr = "2.6"
+smallvec = "1.11"
+rustc-hash = "1.1"
+itoa = "1.0"
 
 [dev-dependencies]
 criterion = "0.5"
